--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.FruitActivity"></activity>
+        <activity android:name=".activity.FruitActivity"
+            android:theme="@style/FruitActivityTheme"></activity>
     </application>
 
 </manifest>
